--- a/config/app.json
+++ b/config/app.json
@@ -1,5 +1,35 @@
 {
     "default":{
         "port":50001
+    },
+    "dev":{
+
+    },
+    "prod":{
+
+    },
+    "kun":{
+
+    },
+    "hinyun":{
+
+    },
+    "claudiu":{
+
+    },
+    "elijah":{
+
+    },
+    "john":{
+
+    },
+    "mike":{
+
+    },
+    "tim":{
+
+    },
+    "trevor":{
+
     }
 }
