Fix for ticket IM-20

--- a/config/app.json
+++ b/config/app.json
@@ -24,7 +24,11 @@
 
     },
     "mike":{
-
+        "port":50002,
+        "mysql":{
+            "user":"mvalenti",
+            "password":"TyrionLannister"
+        }
     },
     "tim":{
 
