--- a/config/app.json
+++ b/config/app.json
@@ -1,6 +1,11 @@
 {
     "default":{
-        "port":50001
+        "port":50001,
+        "mysql":{
+            "host":"localhost",
+            "user":"username",
+            "password":"password"
+        }
     },
     "dev":{
 
