--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "debug": "~2.1.1",
     "express": "~4.12.2",
-    "konfig": "0.2.1"
+    "konfig": "0.2.1",
+    "mysql": "2.6.2"
   }
 }
