--- a/config/app.json
+++ b/config/app.json
@@ -3,7 +3,11 @@
         "port":50001
     },
     "dev":{
-
+        "mysql":{
+            "host":"http://dev.crnidwuuk0de.us-west-2.rds.amazonaws.com/",
+            "user":"dev",
+            "password":"IMPdev321"
+        }
     },
     "prod":{
 
@@ -24,7 +28,7 @@
 
     },
     "mike":{
-
+        "port":50002
     },
     "tim":{
 
