Adding CORS handling

--- a/config/app.json
+++ b/config/app.json
@@ -1,10 +1,11 @@
 {
     "default":{
-        "port":50001
+        "port":50001,
+        "frontend": "http://localhost:50000"
     },
     "dev":{
         "mysql":{
-            "host":"http://dev.crnidwuuk0de.us-west-2.rds.amazonaws.com/",
+            "host":"dev.crnidwuuk0de.us-west-2.rds.amazonaws.com",
             "user":"dev",
             "password":"IMPdev321"
         }
@@ -32,7 +33,13 @@
 
     },
     "mike":{
-        "port":50002
+        "port":50002,
+        "mysql":{
+            "host":"dev.crnidwuuk0de.us-west-2.rds.amazonaws.com",
+            "user":"dev",
+            "password":"IMPdev321"
+        },
+        "frontend": "http://localhost:50000"
     },
     "tim":{
 
