Pushing default mysql params straight through

--- a/config/app.json
+++ b/config/app.json
@@ -1,7 +1,12 @@
 {
     "default":{
         "port":50001,
-        "frontend": "http://localhost:50000"
+        "frontend": "http://localhost:50000",
+        "mysql":{
+            "host":"localhost",
+            "user":"foo",
+            "password":"bar"
+        }
     },
     "dev":{
         "mysql":{
