Fix for ticket IM-20
# Conflicts:
#	config/app.json

--- a/config/app.json
+++ b/config/app.json
@@ -40,11 +40,10 @@
     "mike":{
         "port":50002,
         "mysql":{
-            "host":"dev.crnidwuuk0de.us-west-2.rds.amazonaws.com",
-            "user":"dev",
-            "password":"IMPdev321"
-        },
-        "frontend": "http://localhost:50000"
+            "host":"localhost",
+            "user":"mvalenti",
+            "password":"TyrionLannister"
+        }
     },
     "tim":{
 
