Adding architecture info

--- a/config/app.json
+++ b/config/app.json
@@ -9,6 +9,7 @@
         }
     },
     "dev":{
+        "frontend": "http://dev.thisisimp.com/",
         "mysql":{
             "host":"dev.crnidwuuk0de.us-west-2.rds.amazonaws.com",
             "user":"dev",
@@ -16,7 +17,12 @@
         }
     },
     "prod":{
-
+        "frontend": "http://www.thisisimp.com/",
+        "mysql":{
+            "host":"dev.crnidwuuk0de.us-west-2.rds.amazonaws.com",
+            "user":"dev",
+            "password":"IMPdev321"
+        }
     },
     "kun":{
 
