--- a/config/app.json
+++ b/config/app.json
@@ -1,60 +1,5 @@
 {
     "default":{
-        "port":50001,
-        "frontend": "http://localhost:50000",
-        "mysql":{
-            "host":"localhost",
-            "user":"foo",
-            "password":"bar"
-        }
-    },
-    "dev":{
-        "frontend": "http://dev.thisisimp.com/",
-        "mysql":{
-            "host":"dev.crnidwuuk0de.us-west-2.rds.amazonaws.com",
-            "user":"dev",
-            "password":"IMPdev321"
-        }
-    },
-    "prod":{
-        "frontend": "http://www.thisisimp.com/",
-        "mysql":{
-            "host":"dev.crnidwuuk0de.us-west-2.rds.amazonaws.com",
-            "user":"dev",
-            "password":"IMPdev321"
-        }
-    },
-    "kun":{
-
-    },
-    "hinyun":{
-        "mysql":{
-            "host":"localhost",
-            "user":"username",
-            "password":"password"
-        }
-    },
-    "claudiu":{
-
-    },
-    "elijah":{
-
-    },
-    "john":{
-
-    },
-    "mike":{
-        "port":50002,
-        "mysql":{
-            "host":"localhost",
-            "user":"mvalenti",
-            "password":"TyrionLannister"
-        }
-    },
-    "tim":{
-
-    },
-    "trevor":{
-
+        "port":5002
     }
 }
