--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "InventoryAPI",
+  "name": "DeployAPI",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -10,6 +10,7 @@
     "express": "~4.12.2",
     "konfig": "0.2.1",
     "glob": "5.0.6",
-    "mysql": "2.6.2"
+    "mysql": "2.6.2",
+    "aws-sdk": "2.1.32"
   }
 }
