--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "konfig": "0.2.1",
     "glob": "5.0.6",
     "mysql": "2.6.2",
-    "aws-sdk": "2.1.32"
+    "aws-sdk": "2.1.32",
+    "locks": "0.1.0"
   }
 }
