--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "glob": "5.0.6",
     "mysql": "2.6.2",
     "aws-sdk": "2.1.32",
-    "locks": "0.1.0"
+    "locks": "0.1.0",
+    "connect-timeout": "1.6.2"
   }
 }
