--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mysql": "2.6.2",
     "aws-sdk": "2.1.32",
     "locks": "0.1.0",
-    "connect-timeout": "1.6.2"
+    "connect-timeout": "1.6.2",
+    "serve-favicon":"2.3.0"
   }
 }
